[package]
name = "clipclean"
version = "0.1.3"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = "Deletes facebook messenger links when in clipboard"
license = "MIT"
repository = "https://github.com/TotalKrill/clipclean"
readme = "README.md"

[dependencies]
clipboard = "0.5.0"
url = "1.7.2"
