[package]
name = "clipclean"
version = "0.2.2"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = "Deletes facebook messenger links when in clipboard"
license = "MIT"
repository = "https://github.com/TotalKrill/clipclean"
readme = "README.md"

[features]

default = ["desktop-notifications"]
# Enables desktop notifications when a link has been cleaned
desktop-notifications = ["notify-rust"]


[dependencies]
clipboard = "0.5.0"
url = "1.7.2"
notify-rust = {version = "4.1", optional = true}

[lib]
crate-type = ["cdylib", "rlib"]
